raw content read